# dart_ffi_template

./: .gitignore  pubspec.yaml  readme.md
lib/: bindings.dart  dylib.dart  http.dart
lib/example/: build.dart  main.dart  ui.dart
src/: CMakeLists.txt  export.cpp  export.def  export.h
